<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_sub_menu_1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/nav_schedule"/>
        <item
            android:id="@+id/nav_bookmarks"
            android:title="@string/nav_bookmarks"/>

    </group>

    <group
        android:id="@+id/nav_sub_menu_2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings"/>
        <item
            android:id="@+id/nav_about"
            android:title="@string/nav_about"/>

    </group>

</menu>